--- a/Analysis/compare-biometrics-huc8-x.Rmd
+++ b/Analysis/compare-biometrics-huc8-x.Rmd
@@ -35,46 +35,38 @@ save_directory = paste(file_directory,"/",sep='');
 # bundle - ecoregion, landunit, watershed
 # ftype - ecoregion_iii, nhd_huc6, nhd_huc6=8, nhd_huc10
 
-# Summary Stats
-ss = data.frame(
-  "Biometric" = character(), 
-  "Med R(all/DA/Qmean)" =  numeric(), 
-  "Count" = character(), 
-  "Criteria" = character(), 
-  stringsAsFactors = FALSE) ;
-
 # recreation of BPJ-rcc with all Drainage area?
 batch <- data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-rcc', q_ftype = 'fe_elf', metric = 'aqbio_nt_total')
+    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-rcc', q_ftype = 'fe_elf', metric = 'aqbio_nt_total', title = "HUC8 - Total # of Taxa")
 
 # bpj-rcc
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-minnow', q_ftype = 'fe_elf', metric = 'aqbio_nt_minnow')
+    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-minnow', q_ftype = 'fe_elf', metric = 'aqbio_nt_minnow', title = "HUC8 - # of Taxa True Minnows")
 )
 
 # Centrarchids
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-cent', q_ftype = 'fe_elf', metric = 'aqbio_nt_cent')
+    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-cent', q_ftype = 'fe_elf', metric = 'aqbio_nt_cent', title = "HUC8 - # of Taxa Centrarchids")
 )
 
 # Using 75% value from ymax analysis of all HUC8s
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-benins', q_ftype = 'fe_elf', metric = 'aqbio_nt_benins')
+    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-benins', q_ftype = 'fe_elf', metric = 'aqbio_nt_benins', title = "HUC8 - # of Taxa Benthic Insectivores")
 )
 
 # darter
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-darter', q_ftype = 'fe_elf', metric = 'aqbio_nt_darter')
+    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-huc6bp-darter', q_ftype = 'fe_elf', metric = 'aqbio_nt_darter', title = "HUC8 - # of Taxa Darters")
 )
 
 # Using 75% value from ymax analysis of all HUC8s
 batch <- rbind(
   batch, data.frame(
-    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-rcc', q_ftype = 'fe_elf', metric = 'aqbio_nt_cypr_native')
+    bundle = 'watershed', ftype = 'nhd_huc8', dataset_tag = 'bpj-rcc', q_ftype = 'fe_elf', metric = 'aqbio_nt_cypr_native', title = "HUC8 - # of Taxa Native Cyprinidae")
 )
 
 
